--- a/main.html
+++ b/main.html
@@ -10,6 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h3> What is the capital of India?</h3>
+	<input type="radio" name="option" >
+	<label for="option">New Delhi</label><br>
+	<input type="radio" name="option">
+	<label for="option">Mumbai</label>
+	<div class="onlydiv">
+		<p>New Delhi is the capital of India and an administrative district of NCT Delhi.</p>
+	</div>
 
 </body>
 
