--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 	<input type="radio" name="option">
 	<label for="option">Mumbai</label>
 	<div class="onlydiv">
-		<p>New Delhi is the capital of India and an administrative district of NCT Delhi.</p>
+		<blockquote>New Delhi is the capital of India and an administrative district of NCT Delhi.</p>
 	</div>
 
 </body>
